# Hikari-core

./: .gitignore  README.md  pyproject.toml
hikari_core/: HttpClient_Pool.py  __init__.py  analysis.py  analyze.py  command_select.py  config.py  data_source.py  model.py  utils.py
hikari_core/Html_Render/: __init__.py  browser.py  data_source.py
hikari_core/Template/: bind-list.html  cw-rank.html  select-clan.html  select-ship-v2.html  select-ship.html  ship-rank.html  text.html  wws-ban.html  wws-box-christmas-v2.html  wws-box-christmas.html  wws-clan-cw.html  wws-clan.html  wws-info-recent.html  wws-info-recents.html  wws-info.html  wws-ship-recent.html  wws-ship.html  wws-sx.html  wws-unban.html
hikari_core/game/: ban_search.py  box_check.py  help.py  roll.py  sx.py
hikari_core/moudle/: publicAPI.py  wws_bind.py  wws_clan.py  wws_clanrank.py  wws_cw_recent.py  wws_cwrank.py  wws_info.py  wws_real_game.py  wws_recent.py  wws_recents.py  wws_ship_info.py  wws_ship_recent.py  wws_shiprank.py
tests/: test.py
