[tool.poetry]
name = "hikari-core"
version = "0.1.1"
description = ""
authors = ["benx1n <1119809439@qq.com>"]
readme = "README.md"
packages = [{include = "hikari_core"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = { version = ">=0.24.0", extras = ["http2"] }
orjson = "^3.8.11"
asyncio = "^3.4.3"
APScheduler = "^3.10.1"
jinja2 = "^3.1.2"
pydantic = "^1.10.7"
playwright = ">=1.17.2"
aiofiles = ">=0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
