[tool.poetry]
name = "hikari-core"
version = "0.1.6"
description = ""
authors = ["benx1n <1119809439@qq.com>"]
readme = "README.md"
packages = [{include = "hikari_core"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = { version = ">=0.24.0", extras = ["http2"] }
orjson = "^3.8.11"
asyncio = "^3.4.3"
APScheduler = "^3.10.1"
jinja2 = "^3.0.0"
pydantic = "^1.10.7"
playwright = ">=1.17.2"
aiofiles = ">=0.8.0"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
skip-string-normalization = true

[tool.ruff]
line-length = 150
respect-gitignore = true
ignore-init-module-imports = true
select = [
    'F',  # pyflakes
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings
    'I',  # isort
    'C',  # flake8-comprehensions
    'B',  # flake8-bugbear
    'Q',  # flake8-quotes
    'PL',  # pylint
    'RUF',  # Ruff-specific rules
]
ignore = [
    'E501',
    "RUF001",
    "RUF002",
    "RUF003",
    "PLR2004",
    "C901",
    "PLR0912",
    "PLR0911",
    "PLW0603"
]
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}